# libHBAAPI

./: HBAAPI.pc.in  HBAAPILIB.c  Makefile.am  configure.ac  hbaapi-conf.patch  hbaapi.h  hbaapi2.2.patch  libHBAAPI.spec
